# ai-agent-invoice-payment-prediction-b2b

./: .gitignore  README.md  baseline.ipynb  chat.py  docker-compose.yml  exploratory - copia.ipynb  exploratory.ipynb  exploratory_script.py  main.py  pyproject.toml  requirements.txt  run_testing.bat  rutas.txt  start_a2a_services.bat  temp
config/: settings.py
docker/: init.sql
docs/: apps.agents.analysis_agent.graph.rst  apps.agents.analysis_agent.prompts.rst  apps.agents.analysis_agent.rst  apps.agents.analysis_agent.service.rst  apps.agents.analysis_agent.tools.rst  apps.agents.base.rst  apps.agents.base_executor.rst  apps.agents.data_agent.graph.rst  apps.agents.data_agent.prompts.rst  apps.agents.data_agent.rst  apps.agents.data_agent.service.rst  apps.agents.data_agent.tools.rst  apps.agents.memory_agent.graph.rst  apps.agents.memory_agent.prompts.rst  apps.agents.memory_agent.rst  apps.agents.memory_agent.service.rst  apps.agents.memory_agent.tools.rst  apps.agents.rst  apps.agents.shared.rst  apps.agents.state.rst  apps.frontend.chat.rst  apps.frontend.rst  apps.orchestrator.a2a_service.rst  apps.orchestrator.agent.rst  apps.orchestrator.dependencies.rst  apps.orchestrator.graph.rst  apps.orchestrator.main.rst  apps.orchestrator.prompts.rst  apps.orchestrator.routes.chat.rst  apps.orchestrator.routes.health.rst  apps.orchestrator.routes.rst  apps.orchestrator.rst  apps.orchestrator.schemas.rst  apps.rst  conf.py  index.rst  modules.rst  services.memory_mcp.rst  services.memory_mcp.server.rst  services.memory_mcp.store.rst  (+27 more)
notebooks/: baseline.ipynb  (+3 more)
(+140 files in other folders)
