[project]
name = "ai-agent-invoice-payment-prediction-b2b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.0",
    "fastapi>=0.100.0",
    "fastmcp>=2.0.0",
    "furo>=2025.0.0",
    "httpx>=0.28.0",
    "joblib>=1.5.0",
    "langchain-core>=1.0.0",
    "langchain-mistralai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint>=3.0.0",
    "langsmith>=0.5.0",
    "numpy>=2.0.0",
    "odoorpc>=0.10.0",
    "pandas>=2.0.0",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.8.0",
    "sphinx>=9.0.0",
    "streamlit>=1.50.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.30.0",
]
